<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".promedio">

    <EditText
        android:id="@+id/txtmat1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtmat2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/mat1"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txtmat2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtmat2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtmat3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/mat2"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txtmat3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtmat3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtmat4"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="7dp"
        android:ems="10"
        android:hint="@string/mat3"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txtmat4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtmat4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtmat5"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/mat4"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn"
        android:layout_width="113dp"
        android:layout_height="46dp"
        android:layout_above="@+id/Listview"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="151dp"
        android:layout_marginBottom="17dp"
        android:text="@string/Calculated"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtmat4" />

    <EditText
        android:id="@+id/txtmat5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/mat5"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <ListView
        android:id="@+id/Listview"
        android:layout_width="234dp"
        android:layout_height="135dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:textColor="#FFFFFF"
        android:layout_marginStart="87dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="35dp"
        android:textColorHint="#FFFFFF" />

</RelativeLayout>