<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".Aniobisiesto">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/leapyear"
        android:textSize="50dp"
        android:textColor="#ffffff"
        />

    <EditText
        android:id="@+id/edtxtAn"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/btnVer"
        android:layout_marginStart="57dp"
        android:layout_marginTop="60dp"
        android:background="#ffffff"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="4" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edtxtAn"
        android:gravity="center|right"
        android:text="@string/year"
        android:textColor="#ffffff"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnVer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="311dp"
        android:layout_toEndOf="@+id/textView2"
        android:text="@string/Calculated"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/resul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:textColor="#FFFFFF"
        android:layout_marginEnd="-4dp"
        android:layout_marginBottom="188dp"
        android:gravity="center"
        />
</RelativeLayout>